\name{NEWS}
\title{NEWS file for the mosaic package}
\section{Changes in version 0.8}{
\itemize{
\item \code{plotDist} now accepts \code{add=TRUE} and \code{under=TRUE}, making it easy to add
plots of distributions over (or under) plots of data (e.g., histograms, densityplots, etc.)
or other distributions.
\item Plotting funcitons with with the option \code{add=TRUE} have been reimplemented using
\code{layer} from \pkg{latticeExtra}.  See documentaiton of these functions for details.
\item \code{ladd} has been completely reimplemented using \code{layer()} from \pkg{latticeExtra}.  See 
documentation of \code{ladd()} for details, including some behavior changes.
\item aggregating functions (\code{mean}, \code{sd}, \code{var}, et al) now use \code{getOptions("na.rm")} to determine the default value of \code{na.rm}.  Use \code{options(na.rm=TRUE)} to
change the default behavior to remove \code{NA}s and options(na.rm=NULL) to restore 
defaults.
\item \code{do} has been largely rewritten with an eye toward improved 
efficiency.  In particular, \code{do} will take advantage of multiple cores
if the \pkg{parallel} package is availalbe. At this point, sluggishness in applications of \code{do} are 
mostly likely due to the sluggishness of what is being done, not to \code{do} itself.
\item Added an additional method to \code{deltaMethod} from the \pkg{car} package to make it easier to do propagation of uncertainty is some situations
that arrise commonly in the physical sciences and engineering.
\item Added \code{cdist} to compute critical values for the central portion
of a distribution.
\item Some changes to the API for \code{qdata}.  For interactive use, this 
not cause any problem, but old programmatic uses of \code{qdata} should be 
checked as the object returned is now different.